# Swiftgrade-Testing

./: .env.example  .gitignore  BUGFIX_README.md  ERROR_FIXES.md  QUICK_FIX_GUIDE.md  README-backend.md  README.md  TECHNICAL_README.md  backend-x86_64-pc-windows-msvc.spec  backend.py  backend_fixed.spec  backend_launcher.py  backend_launcher.spec  backend_packager.py  backend_runner.py  build-with-devtools.js  create_token_usage_table.py  grading-prompt-updated.md  index.html  package-lock.json  package.json  requirements-backend.txt  test_answer_key_placeholder.py  test_json_extraction.py  verify_bugfixes.py  vite.config.ts
.serena/: project.yml
app/: db.py  main.py  models.py  schemas.py  supabase_client.py
docs/: AI_Issues_Flows.html  AI_flow_Rahul.drawio.html  API_JSON_FORMATS.md  BACKEND_FIX_INSTRUCTIONS.md  BACKEND_FIX_SIMPLE.md  COMPLETE_FIX_GUIDE.md  COMPLETE_FIX_SUMMARY.md  CORRECTED_FORMAT.md  Essay_Grading_Prototype_Workflow.html  FINAL_SOLUTION.md  FRONTEND_INPUT_JSON.md  GRADING_RUBRIC_ARCHITECTURE.md  GRADING_RUBRIC_CHECKLIST.md  GRADING_RUBRIC_IMPLEMENTATION_PLAN.md  GRADING_RUBRIC_TECHNICAL_SPEC.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_RUBRIC_PROMPTS.md  Open Router Workflow.docx  PROD_REVIEW_QBQ_AI.md  PROMPT_SETTINGS_FIX.md  PROMPT_SETTINGS_SOLUTION.md  QBQ_AI_Review_Simple.md  QUICK_COPY_PASTE.txt  README.md  REASONING_DISPLAY_FIX.md  (+25 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.debug.json  tauri.conf.json  tauri.conf.web-dragdrop.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+99 files in other folders)
