[package]
name = "mark-grading-assistant"
version = "1.0.0"
description = "Mark Grading Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "mark_grading_assistant_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
portpicker = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
